# cop_diffusion

./: .gitignore  Makefile  README.md  pyproject.toml  settings.ini
cop_diffusion/: _modidx.py  start.py  utils.py
nbks/: convolution_101.ipynb  diffusion_from_scratch.ipynb  extract.ipynb  gradient_ascent.ipynb  ref_vq_vae.ipynb  sparse_autoenc.ipynb  start.ipynb  unet_museum.ipynb  utils.ipynb  vq-vae.ipynb
