[tool.poetry]
name = "cop-diffusion"
version = "0.1.0"
description = ""
authors = ["jkunz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
torchvision = "^0.18.1"
matplotlib = "^3.9.1"
icecream = "^2.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
nbdev = "^2.3.25"
ipykernel = "^6.29.4"
setuptools = "^70.1.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
