[tool.poetry]
name = "cop-diffusion"
version = "0.1.0"
description = ""
authors = ["jkunz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
torchvision = "0.19"
matplotlib = "^3.9.1"
icecream = "^2.1.3"
torch-tb-profiler = "^0.4.3"
numpy = "<2.0.0"
tqdm = "^4.66.4"
diffusers = "^0.29.2"
pypdf2 = "^3.0.1"
tensorboard = "^2.18.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
nbdev = "^2.3.25"
ipykernel = "^6.29.4"
setuptools = "^70.1.0"
black = "^24.4.2"
tensorboard = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
